up to java19 and Gradle8.0